Fix video overflow and scrolling issue

--- a/styles.css
+++ b/styles.css
@@ -207,14 +207,20 @@ article:hover {
 .overlay {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr;
   background-image: url(images/craig-whitehead-463489-unsplash.jpg);
   background-size: cover;
 }
 
+.video-container {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+  overflow: hidden;
+}
+
 video {
-  position: absolute;
-  top: 0;
-  left: 0;
   min-width: 100%;
   min-height: 100%;
   width: auto;
@@ -373,7 +379,6 @@ video {
   body {
     grid-template-columns: 1fr;
     grid-template-rows: 30% 1fr;
-    overflow: hidden;
   }
 
   .overlay {
